Remove redundant module access args